# P4_Scene_Streaming

./: .gitignore  CMakeLists.txt  CMakePresets.json  P4_Scene_Streaming.cpp  P4_Scene_Streaming.h  SceneStreaming_Client.cpp  SceneStreaming_Client.h  SceneStreaming_Server.cpp  SceneStreaming_Server.h
Assets/Shaders/: sample.frag  sample.vert
proto/: SceneStreaming.proto  proto_compile.bat
src_client/: SceneStreamClient.h
src_client/Private/: SceneStreamClient.cpp
src_client/Public/: SceneStreamClient.h
src_common/: Color.h  String.h
src_common/Private/: Application.cpp
src_common/Private/Camera/: Camera.cpp  CameraManager.cpp
src_common/Private/Components/Renderers/: MeshRenderer.cpp
src_common/Private/Components/Update/: CameraComponent.cpp
src_common/Private/Graphics/: GraphicsSystem.cpp  Shader.cpp  ShaderList.cpp
src_common/Private/Input/: Input.cpp
src_common/Private/Objects/: Object.cpp  ObjectManager.cpp
src_common/Private/Resources/: FragShader.cpp  Mesh.cpp  ResourceManager.cpp  VertexShader.cpp
src_common/Private/Scenes/: Scene.cpp  SceneManager.cpp
src_common/Private/Serialization/: Serializer.cpp
src_common/Private/Window/: Window.cpp
src_common/Public/: Application.h  Color.hpp  Common.hpp  Logger.hpp
src_common/Public/Camera/: Camera.h  CameraManager.h
src_common/Public/Components/: IComponent.h
src_common/Public/Components/Interfaces/: ICollider.h
src_common/Public/Components/Renderers/: IRenderer.h  MeshRenderer.h
src_common/Public/Components/Update/: AudioSourceComponent.h  BulletMover.h  CameraComponent.h  CameraController.h  CharacterController.h  EnemyController.h  EnemySpawner.h  FPSCounterUpdater.h  IUpdateComponent.h  ImagePanning.h  MouseDetectScript.h  ScoreUpdater.h
src_common/Public/Graphics/: GraphicsSystem.h  IRenderable.h  Shader.h  ShaderList.h
src_common/Public/Input/: Input.h
src_common/Public/Math/: Constants.h  Mat4.h  Quaternion.h  Transform.h  Vec2.h  Vec3.h  Vec4.h  Vertex.h
src_common/Public/Objects/: Object.h  ObjectManager.h
src_common/Public/Resources/: IResource.h  IShaderResource.h  Mesh.h  ResourceManager.h
src_common/Public/Scenes/: Scene.h  SceneManager.h
src_common/Public/Serialization/: ISerializable.h  Serializer.h
src_common/Public/Window/: Window.h
src_server/: SceneStreamServer.h
src_server/Private/: SceneStreamServer.cpp
src_server/Public/: SceneStreamServer.h
